--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,6 +1,6 @@
 #home-component {
     display: flex;
-    min-height: 100vh;
+    min-height: 100%;
     flex-direction: column;
     align-items: center;
     justify-content: center;
