--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
   </div>
   
   <div id="timestamp-container">
-  <div class="ts-container" *ngFor="let t of timestampList; let i = index">
+  <div class="ts-container" *ngFor="let t of workingDay.timestamps; let i = index">
     <!-- <div class="col-xs-6"> -->
       <div class="input-group">
           <input type="time" class="form-control" [(ngModel)]="t.time" (ngModelChange)="changeTimestamp($event, t)">
@@ -22,8 +22,8 @@
   <div id="btn-container">
     <button id="add-ts-btn" type="button" class="btn btn-info btn-lg btn-block" (click)="addTimestamp()">
         Tap  
-        <span *ngIf="timestampList.length % 2 == 0">!</span>
-        <span *ngIf="timestampList.length % 2 != 0">!!</span>
+        <span *ngIf="workingDay.timestamps.length % 2 == 0">!</span>
+        <span *ngIf="workingDay.timestamps.length % 2 != 0">!!</span>
       </button>
   </div>
 </div>
